--- a/make_fig3-6/fig3.ipynb
+++ b/make_fig3-6/fig3.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import cv2\n",
     "\n",
@@ -19,6 +30,13 @@
     "im_v_resize = vconcat_resize_min([im1, im2])\n",
     "cv2.imwrite('../fig3-6/fig3.png', im_v_resize)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
